2001-01-05  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-cut-and-paste.c (delete_object_do): use disable
	selection instead of deactivate to deselect deleted objects
	(html_point_get_left): added allow_null parameter
	(html_point_get_right): likewise
	(prepare_delete_bounds): allow NULL for bounds, but not for from,
	to

	* htmlengine.c (html_engine_thaw): use html_draw_queue_clear

	* htmldrawqueue.c (html_draw_queue_clear): new function
	(html_draw_queue_flush): use html_draw_queue_clear

	* htmlengine-edit-cut-and-paste.c (delete_object): don't set
	cursor to home, op_cut take care of cursor now

	* htmlobject.c (html_object_op_copy): pass engine instead of empty
	text
	(html_object_op_cut): likewise
	(op_cut): take care of cursor

2001-01-04  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-cut-and-paste.c (check_magic_link): new helper
	function
	(html_engine_insert_empty_paragraph): use check_magic_link
	(html_engine_insert_text): likewise

	* htmltext.c (html_text_magic_link): moved magic links code here
	(paste_link): use paste_object + undo levels

	* htmlengine-edit-table.c (html_engine_insert_table): likewise

	* htmlengine-edit-rule.c (html_engine_insert_rule): don't destroy
	rule after pasting

	* htmlengine-edit-images.c (html_engine_insert_image): don't
	destroy image after pasting

2001-01-03  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-cut-and-paste.c (remove_empty_and_merge): remove
	child before destroy

	* htmllinktextmaster.c (html_link_text_master_class_init): set
	merge method

	* htmlobject.c (html_object_destroy): ops, take back remove_child
	to merge
	(html_object_merge): remove child

2000-12-29  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (divide_into_percented): fixed, there was error in
	part calculation in case left < to_fill

2000-12-21  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (html_table_end_row): fixed crash for empty row
	<tr></tr>

2000-12-20  Radek Doulik  <rodo@helixcode.com>
